force-app/main/default/objects/NRMA__c/NRMA__c.object-meta.xml
<CustomObject>
    <label>NRMA</label>
    <nameField>
        <displayFormat>NRMA Order - {0000}</displayFormat>
        <label>order number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NRMA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>