force-app/main/default/objects/NRMA__c/fields/ab__c.field-meta.xml
<CustomField>
    <fullName>ab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ab</label>
    <type>Checkbox</type>
</CustomField>