force-app/main/default/objects/NRMA__c/fields/AE_SB__c.field-meta.xml
<CustomField>
    <fullName>AE_SB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AE_SB__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AE_SB__c</referenceTo>
    <relationshipLabel>NRMA</relationshipLabel>
    <relationshipName>NRMA</relationshipName>
    <type>Lookup</type>
</CustomField>