force-app/main/default/objects/NRMA__c/fields/AE_SB_Price__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Price__c</fullName>
    <formula>AE_SB__r.price__c *  QTY_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE/SB Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>