force-app/main/default/objects/NRMA__c/fields/airline_upgrade__c.field-meta.xml
<CustomField>
    <fullName>airline_upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>airline upgrade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>airline_upgrade__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>airline_upgrade__c</referenceTo>
    <relationshipName>NRMA</relationshipName>
    <type>Lookup</type>
</CustomField>