force-app/main/default/objects/NRMA__c/fields/AUSDate__c.field-meta.xml
<CustomField>
    <fullName>AUSDate__c</fullName>
    <formula>TEXT(DAY( DateFOrmat__c ))&amp;&quot;/&quot;&amp;TEXT(MONTH( DateFOrmat__c ))&amp;&quot;/&quot;&amp;TEXT(YEAR( DateFOrmat__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUSDate</label>
    <type>Text</type>
</CustomField>