force-app/main/default/objects/NRMA__c/fields/Booking_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Status__c</fullName>
    <label>Booking Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
                <default>true</default>
                <label>Confirmed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>