force-app/main/default/objects/NRMA__c/fields/City_Formula__c.field-meta.xml
<CustomField>
    <fullName>City_Formula__c</fullName>
    <formula>TEXT(departure_cities__r.city__c) =  Dept_City_FA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Formula</label>
    <type>Checkbox</type>
</CustomField>