force-app/main/default/objects/NRMA__c/fields/City_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>City_of_Birth__c</fullName>
    <label>City of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>