force-app/main/default/objects/NRMA__c/fields/Commdepcity__c.field-meta.xml
<CustomField>
    <fullName>Commdepcity__c</fullName>
    <formula>(((departure_cities__r.Surcharge__c *  QTY_Number__c )/100) * 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commdepcity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>