force-app/main/default/objects/NRMA__c/fields/CommDepDate__c.field-meta.xml
<CustomField>
    <fullName>CommDepDate__c</fullName>
    <formula>(( (departures_dates__r.HSS_amount__c* QTY_Number__c ) /100) * 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommDepDate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>