force-app/main/default/objects/NRMA__c/fields/CommissionPrestop__c.field-meta.xml
<CustomField>
    <fullName>CommissionPrestop__c</fullName>
    <formula>(IF( Solo_Traveller__c , (VALUE(TEXT(QTY__c)) *  sub_stopover__r.Price_Solo__c  ),(VALUE(TEXT(QTY__c)) *  sub_stopover__r.Price__c  ))/100)*10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommissionPrestop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>