force-app/main/default/objects/NRMA__c/fields/CommPostStop__c.field-meta.xml
<CustomField>
    <fullName>CommPostStop__c</fullName>
    <formula>(IF( Solo_Traveller__c , (VALUE(TEXT(QTY__c)) *  Post_Tour_StopOver__r.Price_Solo__c ),(VALUE(TEXT(QTY__c)) * Post_Tour_StopOver__r.Price__c ))/100)*10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommPostStop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>