force-app/main/default/objects/NRMA__c/fields/CommSoloSurcharge__c.field-meta.xml
<CustomField>
    <fullName>CommSoloSurcharge__c</fullName>
    <formula>(IF(   Solo_Traveller__c   ,  sub_options__r.solo_surcharge__c , 0)/100)*10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommSoloSurcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>