force-app/main/default/objects/NRMA__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alex Videcak</fullName>
            </value>
            <value>
                <fullName>Anna Maria Isusqui</fullName>
            </value>
            <value>
                <fullName>Anthony Nguyen</fullName>
            </value>
            <value>
                <fullName>Bee Nguyen</fullName>
            </value>
            <value>
                <fullName>Brad Johnstone</fullName>
            </value>
            <value>
                <fullName>Eda Yag</fullName>
            </value>
            <value>
                <fullName>Hancy Furtado</fullName>
            </value>
            <value>
                <fullName>Jo Hynes</fullName>
            </value>
            <value>
                <fullName>Kerri-Ann Taylor</fullName>
            </value>
            <value>
                <fullName>Lana Hamer</fullName>
            </value>
            <value>
                <fullName>Malcolm loong</fullName>
            </value>
            <value>
                <fullName>Matthew Telfer</fullName>
            </value>
            <value>
                <fullName>Michelle Dawson</fullName>
            </value>
            <value>
                <fullName>Natalie Succar</fullName>
            </value>
            <value>
                <fullName>Patrice Sydor</fullName>
            </value>
            <value>
                <fullName>Pradnya Padma</fullName>
            </value>
            <value>
                <fullName>Sarah Bower</fullName>
            </value>
            <value>
                <fullName>Segran Menon</fullName>
            </value>
            <value>
                <fullName>Tania Rennie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>