force-app/main/default/objects/NRMA__c/fields/Core_Deal__c.field-meta.xml
<CustomField>
    <fullName>Core_Deal__c</fullName>
    <formula>Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal</label>
    <type>Text</type>
</CustomField>