force-app/main/default/objects/NRMA__c/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <label>Country of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>