force-app/main/default/objects/NRMA__c/fields/DateFOrmat__c.field-meta.xml
<CustomField>
    <fullName>DateFOrmat__c</fullName>
    <formula>DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateFOrmat</label>
    <type>Date</type>
</CustomField>