force-app/main/default/objects/NRMA__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Deal__c.NRMA_Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filterItems>
        <filterItems>
            <field>$Source.Order_Override__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>NRMA</relationshipLabel>
    <relationshipName>NRMA_Availablility</relationshipName>
    <type>Lookup</type>
</CustomField>