force-app/main/default/objects/NRMA__c/fields/Deal_ID_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_Title__c</fullName>
    <formula>Deal__r.TAD_Deal_ID__c&amp;&apos;+&apos;&amp;Deal__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID + Title</label>
    <type>Text</type>
</CustomField>