force-app/main/default/objects/NRMA__c/fields/DealNameFormula__c.field-meta.xml
<CustomField>
    <fullName>DealNameFormula__c</fullName>
    <formula>Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealNameFormula</label>
    <type>Text</type>
</CustomField>