force-app/main/default/objects/NRMA__c/fields/Dep_City_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Dep_City_Surcharge__c</fullName>
    <formula>departure_cities__r.Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dep City Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>