force-app/main/default/objects/NRMA__c/fields/departure_cities__c.field-meta.xml
<CustomField>
    <fullName>departure_cities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>departure cities</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>departure_cities__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>departure_cities__c</referenceTo>
    <relationshipLabel>NRMA</relationshipLabel>
    <relationshipName>NRMA_Availablility</relationshipName>
    <type>Lookup</type>
</CustomField>