force-app/main/default/objects/NRMA__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <label>departures dates</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 2 OR 3) AND 4 AND 5) OR 6</booleanFilter>
        <filterItems>
            <field>departures_dates__c.sub_options__c</field>
            <operation>equals</operation>
            <valueField>$Source.sub_options__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.options__c</field>
            <operation>equals</operation>
            <valueField>$Source.options__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.NRMA_Date__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Order_Override__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>NRMA</relationshipLabel>
    <relationshipName>NRMA_Availablility</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>