force-app/main/default/objects/NRMA__c/fields/Dept_City_FA__c.field-meta.xml
<CustomField>
    <fullName>Dept_City_FA__c</fullName>
    <label>Dept City(FA)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>