force-app/main/default/objects/NRMA__c/fields/Dept_Date_FA__c.field-meta.xml
<CustomField>
    <fullName>Dept_Date_FA__c</fullName>
    <label>Dept Date(FA)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>