force-app/main/default/objects/NRMA__c/fields/FAID__c.field-meta.xml
<CustomField>
    <fullName>FAID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAID</label>
    <type>Text</type>
</CustomField>