force-app/main/default/objects/NRMA__c/fields/High_Season_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>High_Season_Surcharge__c</fullName>
    <formula>departures_dates__r.HSS_amount__c *  QTY_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Season Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>