force-app/main/default/objects/NRMA__c/fields/Insurance_Provider_Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Emergency_Phone__c</fullName>
    <label>Insurance Provider Emergency Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>