force-app/main/default/objects/NRMA__c/fields/line_price_less_gst__c.field-meta.xml
<CustomField>
    <fullName>line_price_less_gst__c</fullName>
    <formula>Line_Price__c - (( Line_Price__c / 100) * 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>line price less gst</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>