force-app/main/default/objects/NRMA__c/fields/Link_to_other_booking__c.field-meta.xml
<CustomField>
    <fullName>Link_to_other_booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to other booking</label>
    <referenceTo>NRMA__c</referenceTo>
    <relationshipLabel>NRMA</relationshipLabel>
    <relationshipName>Link_to_other_booking</relationshipName>
    <type>Lookup</type>
</CustomField>