force-app/main/default/objects/NRMA__c/fields/Nett_Due__c.field-meta.xml
<CustomField>
    <fullName>Nett_Due__c</fullName>
    <label>Nett Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>