force-app/main/default/objects/NRMA__c/fields/NRMA_Commission__c.field-meta.xml
<CustomField>
    <fullName>NRMA_Commission__c</fullName>
    <formula>((Total_Price__c + Solo_Surcharge__c ) / 100)* 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRMA Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>