force-app/main/default/objects/NRMA__c/fields/NRMAORDER__c.field-meta.xml
<CustomField>
    <fullName>NRMAORDER__c</fullName>
    <formula>RIGHT(Name, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRMAORDER#</label>
    <type>Text</type>
</CustomField>