force-app/main/default/objects/NRMA__c/fields/options__c.field-meta.xml
<CustomField>
    <fullName>options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>options</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>options__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>NRMA</relationshipLabel>
    <relationshipName>NRMA_Availablility</relationshipName>
    <type>Lookup</type>
</CustomField>