force-app/main/default/objects/NRMA__c/fields/Order_Override__c.field-meta.xml
<CustomField>
    <fullName>Order_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Override</label>
    <type>Checkbox</type>
</CustomField>