force-app/main/default/objects/NRMA__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticketed</fullName>
                <default>true</default>
                <label>Ticketed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>