force-app/main/default/objects/NRMA__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>