force-app/main/default/objects/NRMA__c/fields/PAX_Name__c.field-meta.xml
<CustomField>
    <fullName>PAX_Name__c</fullName>
    <label>PAX Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>