force-app/main/default/objects/NRMA__c/fields/PDF__c.field-meta.xml
<CustomField>
    <fullName>PDF__c</fullName>
    <formula>Deal__r.NRMA_PDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF</label>
    <type>Text</type>
</CustomField>