force-app/main/default/objects/NRMA__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <label>Post Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>