force-app/main/default/objects/NRMA__c/fields/Post_Tour_StopOver__c.field-meta.xml
<CustomField>
    <fullName>Post_Tour_StopOver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Tour StopOver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sub_stopover__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>sub_stopover__c.type__c</field>
            <operation>equals</operation>
            <value>Post Tour</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>sub_stopover__c</referenceTo>
    <relationshipLabel>NRMA (Post Tour StopOver)</relationshipLabel>
    <relationshipName>NRMA1</relationshipName>
    <type>Lookup</type>
</CustomField>