force-app/main/default/objects/NRMA__c/fields/QTY_Number__c.field-meta.xml
<CustomField>
    <fullName>QTY_Number__c</fullName>
    <formula>VALUE(TEXT(QTY__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QTY Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>