force-app/main/default/objects/NRMA__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <label>Travel Tek Booking No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>