force-app/main/default/objects/NRMA__c/fields/Send_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>