force-app/main/default/objects/NRMA__c/fields/Solo__c.field-meta.xml
<CustomField>
    <fullName>Solo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solo</label>
    <type>Checkbox</type>
</CustomField>