force-app/main/default/objects/NRMA__c/fields/Solo_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Solo_Surcharge__c</fullName>
    <formula>IF( Solo_Traveller__c ,  (VALUE(TEXT(QTY__c)) *  sub_options__r.solo_surcharge__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solo Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>