force-app/main/default/objects/NRMA__c/fields/Solo_Traveller__c.field-meta.xml
<CustomField>
    <fullName>Solo_Traveller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solo Traveller</label>
    <type>Checkbox</type>
</CustomField>