force-app/main/default/objects/NRMA__c/fields/Sub_Option__c.field-meta.xml
<CustomField>
    <fullName>Sub_Option__c</fullName>
    <formula>sub_options__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Option</label>
    <type>Text</type>
</CustomField>