force-app/main/default/objects/NRMA__c/fields/sub_options__c.field-meta.xml
<CustomField>
    <fullName>sub_options__c</fullName>
    <label>sub options</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sub_options__c.options__c</field>
            <operation>equals</operation>
            <valueField>$Source.options__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>NRMA</relationshipLabel>
    <relationshipName>NRMA_Availablility</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>