force-app/main/default/objects/NRMA__c/fields/TADDealID__c.field-meta.xml
<CustomField>
    <fullName>TADDealID__c</fullName>
    <formula>Deal__r.TAD_Deal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TADDealID</label>
    <type>Text</type>
</CustomField>