force-app/main/default/objects/NRMA__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>IF(  ISPICKVAL( Deal__r.Allocation_by__c , &quot;&quot;)  , ( sub_options__r.price__c  *   VALUE(TEXT(QTY__c)) ), (( options__r.price__c +  sub_options__r.Price_formula__c )*VALUE(TEXT(QTY__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>