force-app/main/default/objects/NRMA__c/validationRules/Allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation</fullName>
    <active>true</active>
    <errorConditionFormula>QTY_Number__c &gt;  departures_dates__r.Remaining_Allocation__c</errorConditionFormula>
    <errorDisplayField>QTY__c</errorDisplayField>
    <errorMessage>Allocation exceeded</errorMessage>
</ValidationRule>