force-app/main/default/objects/NRMA__c/validationRules/Dep_CCity.validationRule-meta.xml
<ValidationRule>
    <fullName>Dep_CCity</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( departure_cities__c )</errorConditionFormula>
    <errorDisplayField>departure_cities__c</errorDisplayField>
    <errorMessage>Departure City Must be Selected</errorMessage>
</ValidationRule>