force-app/main/default/objects/NRMA__c/validationRules/Solo.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( QTY__c , &apos;1&apos;) , NOT( Solo_Traveller__c ) )</errorConditionFormula>
    <errorDisplayField>Solo_Traveller__c</errorDisplayField>
    <errorMessage>If QTY is 1, Solo traveller must be selected.</errorMessage>
</ValidationRule>