force-app/main/default/objects/NRMA__c/validationRules/Ststus.validationRule-meta.xml
<ValidationRule>
    <fullName>Ststus</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT( Status__c ) = &apos;Confirmed&apos;,  ISBLANK(Receipt_Number__c)  )</errorConditionFormula>
    <errorDisplayField>Receipt_Number__c</errorDisplayField>
    <errorMessage>Receipt number must be entered to complete booking</errorMessage>
</ValidationRule>